--- a/BookReader/Modules/MediumList/MediumCell.xib
+++ b/BookReader/Modules/MediumList/MediumCell.xib
@@ -40,6 +40,10 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="mImageView" destination="Ib0-rT-Xkm" id="8sq-E7-EDO"/>
+                <outlet property="mTitleLabel" destination="zkj-2H-wjA" id="20h-ca-Evs"/>
+            </connections>
             <point key="canvasLocation" x="137.68115942028987" y="87.723214285714278"/>
         </tableViewCell>
     </objects>
