--- a/BookReader/Modules/ReadBook/Views/ReadBookFoot/ReadBookFootView.xib
+++ b/BookReader/Modules/ReadBook/Views/ReadBookFoot/ReadBookFootView.xib
@@ -12,6 +12,7 @@
             <connections>
                 <outlet property="infoLabel" destination="FSK-v4-gdg" id="pb1-mD-p6c"/>
                 <outlet property="progressSlider" destination="7r1-9M-RaR" id="bDU-Ws-H1T"/>
+                <outlet property="progressView" destination="EyB-59-KGI" id="gmp-Te-Tvh"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -31,6 +32,9 @@
                         <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="7r1-9M-RaR">
                             <rect key="frame" x="6" y="32.5" width="363" height="31"/>
                         </slider>
+                        <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="EyB-59-KGI">
+                            <rect key="frame" x="8" y="45.5" width="359" height="4"/>
+                        </progressView>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
@@ -38,6 +42,9 @@
                         <constraint firstItem="FSK-v4-gdg" firstAttribute="centerX" secondItem="ygT-NC-QAz" secondAttribute="centerX" id="842-pw-yl2"/>
                         <constraint firstItem="7r1-9M-RaR" firstAttribute="centerY" secondItem="ygT-NC-QAz" secondAttribute="centerY" multiplier="1.3" id="Ufh-d2-q6F"/>
                         <constraint firstAttribute="trailing" secondItem="7r1-9M-RaR" secondAttribute="trailing" constant="8" id="WJ6-Fj-fOH"/>
+                        <constraint firstItem="EyB-59-KGI" firstAttribute="trailing" secondItem="7r1-9M-RaR" secondAttribute="trailing" id="chX-kl-qDs"/>
+                        <constraint firstItem="EyB-59-KGI" firstAttribute="centerY" secondItem="7r1-9M-RaR" secondAttribute="centerY" id="jgV-fD-xbs"/>
+                        <constraint firstItem="EyB-59-KGI" firstAttribute="leading" secondItem="7r1-9M-RaR" secondAttribute="leading" id="lMe-qv-Uhz"/>
                         <constraint firstItem="7r1-9M-RaR" firstAttribute="leading" secondItem="ygT-NC-QAz" secondAttribute="leading" constant="8" id="o6F-ab-gF7"/>
                     </constraints>
                 </view>
